--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -2,16 +2,16 @@
 #
 #
 
-add_executable(main main.cpp)
+add_executable(showbin main.cpp)
 
-set_target_properties(main
+set_target_properties(showbin
   PROPERTIES
   RUNTIME_OUTPUT_DIRECTORY .. # output exe in project root directory
   )
 
-target_compile_features(main PRIVATE cxx_std_11)
+target_compile_features(showbin PRIVATE cxx_std_11)
 
-target_link_libraries(main PRIVATE exeLib)
+target_link_libraries(showbin PRIVATE exeLib)
 
 #add_custom_target(main
 #  COMMAND main # change to actual program name
